Change 01: First token implementation

--- a/frontend/src/app/score-board-preview/score-board-preview.component.html
+++ b/frontend/src/app/score-board-preview/score-board-preview.component.html
@@ -1,3 +1,4 @@
+<h1>Hello SC</h1>
 <div class="score-row">
   <hacking-challenge-progress-score-card [allChallenges]="allChallenges" />
   <coding-challenge-progress-score-card [allChallenges]="allChallenges" />
@@ -5,14 +6,18 @@
 </div>
 
 <filter-settings
-  *ngIf="applicationConfiguration?.challenges.restrictToTutorialsFirst === false"
+  *ngIf="
+    applicationConfiguration?.challenges.restrictToTutorialsFirst === false
+  "
   [filterSetting]="filterSetting"
   (filterSettingChange)="onFilterSettingUpdate($event)"
   [allChallenges]="allChallenges"
   [reset]="reset.bind(this)"
 ></filter-settings>
 
-<preview-feature-notice [applicationConfig]="applicationConfiguration"></preview-feature-notice>
+<preview-feature-notice
+  [applicationConfig]="applicationConfiguration"
+></preview-feature-notice>
 
 <div *ngIf="isInitialized === false" class="loading-spinner-wrapper">
   <mat-spinner></mat-spinner>
@@ -25,30 +30,35 @@
     (filterSettingChange)="onFilterSettingUpdate($event)"
   ></challenges-unavailable-warning>
 
-  <tutorial-mode-warning 
-    [allChallenges]="allChallenges" 
+  <tutorial-mode-warning
+    [allChallenges]="allChallenges"
     [applicationConfig]="applicationConfiguration"
   ></tutorial-mode-warning>
 
-  <div class="challenges" *ngIf="filteredChallenges.length > 0; else emptyChallenges">
+  <div
+    class="challenges"
+    *ngIf="filteredChallenges.length > 0; else emptyChallenges"
+  >
     <challenge-card
-      *ngFor="let challenge of filteredChallenges; trackBy:getChallengeKey"
+      *ngFor="let challenge of filteredChallenges; trackBy: getChallengeKey"
       [challenge]="challenge"
       [applicationConfiguration]="applicationConfiguration"
       [openCodingChallengeDialog]="openCodingChallengeDialog.bind(this)"
       [repeatChallengeNotification]="repeatChallengeNotification.bind(this)"
-      [ngClass]="{ solved: challenge.solved, unsolved: !challenge.solved, disabled: challenge.disabledEnv !== null }"
+      [ngClass]="{
+        solved: challenge.solved,
+        unsolved: !challenge.solved,
+        disabled: challenge.disabledEnv !== null
+      }"
     />
   </div>
 
   <ng-template #emptyChallenges>
     <!-- only showing when there are more than 1 challenge in total. not completely loaded otherwise -->
     <div class="empty-challenges" *ngIf="allChallenges.length > 0">
-      <p>{{ 'NO_CHALLENGES_FOUND' | translate }}</p>
+      <p>{{ "NO_CHALLENGES_FOUND" | translate }}</p>
     </div>
   </ng-template>
 
-  <img src="assets/public/images/padding/1px.png"/>
-
+  <img src="assets/public/images/padding/1px.png" />
 </ng-container>
-
