--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,7 +2,7 @@
   ~ Copyright (c) 2014-2023 Bjoern Kimminich & the OWASP Juice Shop contributors.
   ~ SPDX-License-Identifier: MIT
   -->
-
+<h1>Hello1</h1>
 <div class="mat-typography">
   <mat-sidenav-container fullscreen>
     <mat-sidenav #sidenav mode="over">
