--- a/frontend/src/app/flags/flags.component.html
+++ b/frontend/src/app/flags/flags.component.html
@@ -1,10 +1,1 @@
-<div fxLayout="column">
-  <div fxLayout="row" fxLayout.lt-md="column">
-    <mat-card fxFlex="grow">
-      <mat-card-title
-        >{{ "Your Flag is : " }}
-        <small class="confirmation">{{ flag }}</small>
-      </mat-card-title>
-    </mat-card>
-  </div>
-</div>
+{{ studentId }}-{{ flag }}
